get data from the server

--- a/page_2.html
+++ b/page_2.html
@@ -36,6 +36,6 @@
             </div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="page2.js"></script>
 </body>
 </html>
